# weather-exporter-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: cargo.yml  cargo_fmt.yml  docker-publish.yml
src/: main.rs  openweathermap.rs  utils.rs
