[package]
name = "weather-exporter-rs"
version = "0.1.9"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3


[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.43.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.218", features = ["derive"] }
prometheus_exporter = "0.8.5"
compile-time = "0.2.0"
