[package]
name = "weather-exporter-rs"
version = "0.2.6"
edition = "2024"
authors = ["Andreas Weiden <andreas.weiden@gmail.com>"]
readme = "README.md"
repository = "https://github.com/graipher/weather-exporter-rs"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"

[dependencies]
compile-time = "0.2.0"
prometheus_exporter = { version = "0.8.5", default-features = false }
reqwest = { version = "0.13.1", features = ["json", "query"] }
serde = { version = "1.0.218", features = ["derive"], default-features = false  }
serde_json = "1.0.140"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"] }
